# Arcwright

./: .env.example  .gitignore  AGENTS.md  README.md  api_server.py  arcwright_sessions.db  arcwright_sessions.db-shm  arcwright_sessions.db-wal  backup_db.sh  docker-compose.yml  implementation_plan-qdrant.md  main.py  requirements.txt  setup.ps1  setup.sh  skills-lock.json  ui.html  venv
forge/: CHANGELOG.md  README.md  batch_process.py  batch_refine_all.py  batch_refine_force_all.py  batch_refine_remaining.py  batch_remaining.py  check_progress.py  plan.md  pyproject.toml  re_refine_problematic.py  reembed_all.py  refine_4_buku.py  requirements.txt  run_layer6.sh  run_layer6_resumable.py  run_layer6_storyworthy.sh  run_layer7_parallel.py  run_layer7_sequential.py  send_report.py  strategi-chunking-lanjutan-untuk-ekstraksi-buku-ke-vector-database-rag-.md  test_layer8_reranker.py  verify_qdrant.py
forge/api/: main.py
forge/arcwright/: __init__.py  boundary.py  chunk.py  cleanup.py  cli.py  config.py  embed.py  enhancer.py  extract.py  pipeline.py  refiner.py  strategy.py
forge/arcwright/utils/: __init__.py  llm.py
forge/data/extracted/: Robert McKee - Story (pdf).md
forge/frontend/: package.json  vite.config.js
forge/frontend/src/: App.jsx
forge/output/: 5book_rechunk_report.json  5book_refined_report.json  batch_interim.json  batch_refine_remaining.json  batch_refine_status.json  batch_report.json
forge/output/6layer_save_the_cat/: chunks_refined.json
forge/output/Building_a_StoryBrand_2_0_Clarify_Your_Message_So_/: chunks.json
forge/output/Contagious_Why_Things_Catch_On__Jonah_Berger___z_l/: chunks.json
forge/scripts/: run-refine.py
forge/src/: 02-chunk-markdown.py  03-embed-and-test.py
(+305 files in other folders)
